feat: manage notification provider routes
